# elliott-wave-engine

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analyst/: __init__.py  _fingerprint.py  citations.py  enums.py  orchestrator.py  taxonomy.py
analyst/client/: base.py  cache.py  gate.py  grounding.py  ollama_client.py
analyst/diagnostics/: bottleneck.py  chart_primitives.py  confirmation.py  decision.py  education.py  scenario_diff.py  succession.py  targets.py
analyst/prompts/: __init__.py  differentiator.py  explanation.py  qa.py  repair.py  scenario_outlook.py  slot_focus.py  system.py
analyst/schemas/: analysis.py  bottleneck.py  citation.py  confirmation.py  decision.py  narration.py  output.py  qa.py  succession.py  targets.py
analyst/serialization/: analysis_blocks.py  fallback.py  scenario.py  slots.py  tree.py
analyst/theory/: chunker.py  citation_map.py  embedder.py  make_embeddings.py  qa_calibration.py  retriever.py
analyst/theory/data/: chunks.jsonl  corpus_meta.json  embeddings.npy
apps/api/: Dockerfile  __init__.py  confidence.py  dependencies.py  main.py  pipeline_ops.py  schemas.py  schemas_responses.py  serializers.py
apps/api/routers/: analyst.py  health.py  pipeline.py  qa.py
apps/api/services/: analyst_service.py
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  instrumentation.ts  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vitest.config.ts  vitest.profile.config.ts
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/web/lib/: api.test.ts  api.ts  ask-store.test.ts  ask-store.ts  chart-layers.test.ts  chart-layers.ts  chart-store.test.ts  chart-store.ts  citations.test.ts  citations.ts  confidence.test.ts  confidence.ts  config.ts  copy-to-clipboard.test.ts  copy-to-clipboard.ts  error-report.test.ts  error-report.ts  format-time.test.ts  format-time.ts  hero-state.test.ts  hero-state.ts  kpi-format.test.ts  kpi-format.ts  locale.tsx  math.test.ts  math.ts  narration-format.test.ts  narration-format.ts  pipeline-status.test.ts  pipeline-status.ts  query.test.ts  query.ts  resolve-locale.test.ts  resolve-locale.ts  scenario-format.test.ts  scenario-format.ts  scenario-ranking.test.ts  scenario-ranking.ts  score-components.test.ts  score-components.ts  (+4 more)
apps/web/profile/: reading-pane-rerender.test.tsx  tsconfig.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  TRADEOFFS.md  architecture.md  development.md  elliott_wave_theory_en.md  examples.md  tradeoffs.md
engine/: __init__.py  adaptive.py  anchor.py  constants.py  display.py  helpers.py  link_rules.py  logging_config.py  pipeline.py  pivot.py  types.py
engine/data/: __init__.py  cache.py  repository.py  source.py  timeframe.py
engine/degree/: __init__.py  cluster.py  gate.py  label.py  measure.py
engine/parser/: __init__.py  api.py  families.py  gates.py  gates_degree.py  leg_structure.py  runtime.py  scoring_config.py  trace.py  types.py
engine/parser/engine/: __init__.py  _helpers.py  branching.py  closing.py  dedup.py  loop.py  seed.py  verifier_adapter.py
engine/parser/output/: __init__.py  dedup.py  diagnostic.py  linkwave_flattening.py  open_subtree.py  scenario_assembly.py  tree_builders.py  types.py
engine/parser/scoring/: __init__.py  components.py  constants.py  helpers.py  structural.py  visual.py
engine/verifiers/: __init__.py  _link_helpers.py  _runner.py  link_s.py  link_t.py  sideway.py  three.py  trend.py
infra/: __init__.py
infra/llm/: __init__.py  ollama_client.py
infra/market_data/: __init__.py  _frames.py  parquet_cache.py  yfinance_source.py
tests/: fixtures.py  test_smoke.py
tests/analyst/: _helpers.py  conftest.py  test_education.py  test_fingerprint.py  test_orchestrator.py  test_public_surface.py  test_qa.py  test_taxonomy.py
tests/analyst/client/: test_cache.py  test_gate.py  test_grounding.py  test_ollama_client.py
tests/analyst/diagnostics/: test_bottleneck.py  test_chart_primitives.py  test_confirmation.py  test_decision.py  test_scenario_diff.py  test_succession.py  test_targets.py
tests/analyst/fixtures/: scenarios.py
tests/analyst/prompts/: test_build.py  test_phrase_policy.py  test_repair.py  test_system.py
tests/analyst/schemas/: test_bottleneck.py  test_citation.py  test_confirmation.py  test_narration.py  test_output.py  test_targets.py
tests/analyst/serialization/: test_analysis_blocks.py  test_fallback.py  test_scenario.py  test_serialization_invariants.py  test_slots.py  test_tree.py
tests/analyst/theory/: test_chunker.py  test_citation_map.py  test_corpus_data.py  test_embedder.py  test_make_embeddings.py  test_retriever.py
tests/apps/: conftest.py  test_analyst_service.py  test_api.py  test_response_models.py  test_scenario_ids.py  test_serializers.py  test_web_parity.py
tests/engine/: conftest.py  test_adaptive.py  test_anchor.py  test_constants_theory_anchor.py  test_display.py  test_logging_config.py  test_pipeline_cache.py  test_pivot.py  test_pivot_atr.py  test_pivot_min_bars.py
tests/engine/data/: test_cache.py  test_repository.py  (+2 more)
(+99 files in other folders)
